--- a/index.html
+++ b/index.html
@@ -5,17 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>PMP Challenge</title>
 </head>
-<header class="header">
+<body>
+    <header class="header">
     <img src="https://i.ibb.co/kDqTcLL/7387233c-0f15-4126-aff2-abd886ec2818-200x200.png" class="header__logo">
-  <ul class="header__menu">
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Menu</a></li>
+    <ul><a href="">Home</a></ul>
+      <ul><a href="">About</a></ul>
+      <ul><a href="">Menu</a></ul>
+      <ul><button>559-123-4567</button></li>
     </ul>
   </header>
-<body>
+  <div class="header__image">
+      HI GUYS
+      </div>
+    <section class="aboutus">
+          <div class="wrapper">
+            <div class="point"><img src="https://cdn.pixabay.com/photo/2015/12/25/06/40/puffin-1107405_1280.jpg" alt="bird1" class="birdphoto"><h2>Title 1</h2><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente aperiam, nobis nisi sunt ullam voluptates inventore. Expedita ad hic, voluptatum aliquid eveniet aperiam ea quisquam, accusamus harum possimus perspiciatis vero.</div>
+            <div class="point"><img src="https://cdn.pixabay.com/photo/2015/12/25/06/40/puffin-1107405_1280.jpg" alt="bird1" class="birdphoto"><h2>Title 2</h2><br>Cumque iusto dignissimos voluptatum similique molestias a fuga saepe nobis ad? Perspiciatis error ipsam voluptates vero. Aliquam laboriosam sed praesentium error voluptatum natus ex vitae, dolorem ratione. Adipisci, magnam qui.</div>
+            <div class="point"><img src="https://cdn.pixabay.com/photo/2015/12/25/06/40/puffin-1107405_1280.jpg" alt="bird1" class="birdphoto"><h2>Title 3</h2><br>Quidem error sunt ipsa, doloribus sapiente architecto ex consequuntur enim illum quam soluta cum nihil impedit aut distinctio deleniti repellat eligendi culpa cupiditate quas neque, aliquam quos magni! Eos, esse.</div>
+          </div>
+        </section>
+
+        <section class="missionstatement">
+            <div class="wrapper">
+              <div class="mission_content">
+                <h2>Mission Statement:</h2>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui provident aliquam quisquam minima tempore? Laudantium, beatae voluptatibus repudiandae voluptate nihil ea eaque, dolorem nemo earum impedit ipsam, magni molestiae quis!
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <section class="moreinfo">
+            
+          </section>
+
+
+
+
+
+
+
+          <footer>
+            <div class="footerstuff">
+
+            </div>
+          </footer>
     
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+<!--    
+  <footer>
+    <div class="wrapper">
+      <img src="https://img.icons8.com/officel/16/000000/leg.png" alt="" class="footer_logo">
+      <a class="footer_content" href="tel:(559) 801-8442">(559) 801-8442</a>
+    </div>
+  </footer>
+</body>
+</html> -->
